--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
     <style>
+        @font-face {
+          font-family: "Apple Chancery";
+          src: url(AppleChancery.ttf);
+        }
         body {
             font-family: "Apple Chancery";
         }
