--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             background-color: magenta;
         }
 
+        td.J-B:hover {
+          background-color: cornflowerblue;
+        }
+
         td.M-A:hover {
             background-color: red;
         }
@@ -707,6 +711,141 @@
               <td class="M-B">Cut Your Bangs</td>
               <td class="M-B">Chinatown</td>
             </tr>
+            <tr>
+              <td class="J-B">Momma</td>
+              <td class="J-B">Biohazard</td>
+              <td class="J-B">Two of Me</td>
+            </tr>
+            <tr>
+              <td class="J-B">HALCALI</td>
+              <td class="J-B">おつかれSUMMER</td>
+              <td class="J-B">ハルカリベーコン</td>
+            </tr>
+            <tr>
+              <td class="J-B">Night Tapes</td>
+              <td class="J-B">Forever</td>
+              <td class="J-B">Forever</td>
+            </tr>
+            <tr>
+              <td class="J-B">Elita</td>
+              <td class="J-B">Sour Switchblade</td>
+              <td class="J-B">Sour Switchblade</td>
+            </tr>
+            <tr>
+              <td class="J-B">Enjoy</td>
+              <td class="J-B">Lounge Thoughts</td>
+              <td class="J-B">Lounge Thoughts</td>
+            </tr>
+            <tr>
+              <td class="J-B">Inner Wave</td>
+              <td class="J-B">Fever</td>
+              <td class="J-B">Apoptosis</td>
+            </tr>
+            <tr>
+              <td class="J-B">Sunset Rollercoaster</td>
+              <td class="J-B">Let There Be Light Again</td>
+              <td class="J-B">TV animation "SONNY BOY" original soundtrack</td>
+            </tr>
+            <tr>
+              <td class="J-B">Boyish</td>
+              <td class="J-B">AnDroGay</td>
+              <td class="J-B">Garden Spider</td>
+            </tr>
+            <tr>
+              <td class="J-B">Tennis</td>
+              <td class="J-B">Need Your Love</td>
+              <td class="J-B">Swimmer</td>
+            </tr>
+            <tr>
+              <td class="J-B">Tennis</td>
+              <td class="J-B">In the Morning I'll Be Better</td>
+              <td class="J-B">Yours Conditionally</td>
+            </tr>
+            <tr>
+              <td class="J-B">Ana Frango Elétrico</td>
+              <td class="J-B">Mulher Homem Bicho</td>
+              <td class="J-B">Mulher Homem Bicho</td>
+            </tr>
+            <tr>
+              <td class="J-B">Hana Vu</td>
+              <td class="J-B">One</td>
+              <td class="J-B">How Many Times Have You Driven By</td>
+            </tr>
+            <tr>
+              <td class="J-B">Dianna Lopez</td>
+              <td class="J-B">Euphoria</td>
+              <td class="J-B">Euphoria</td>
+            </tr>
+            <tr>
+              <td class="J-B">Half Waif</td>
+              <td class="J-B">Orange Blossoms</td>
+              <td class="J-B">Mythopoetics</td>
+            </tr>
+            <tr>
+              <td class="J-B">Sir Chloe</td>
+              <td class="J-B">Femme Fatale</td>
+              <td class="J-B">Femme Fatale</td>
+            </tr>
+            <tr>
+              <td class="J-B">Michele Leigh</td>
+              <td class="J-B">Sunflower</td>
+              <td class="J-B">Sunflower</td>
+            </tr>
+            <tr>
+              <td class="J-B">YONLAPA</td>
+              <td class="J-B">Sweetest Cure</td>
+              <td class="J-B">Sweetest Cure</td>
+            </tr>
+            <tr>
+              <td class="J-B">Miso</td>
+              <td class="J-B">Slow Running</td>
+              <td class="J-B">Slow Running</td>
+            </tr>
+            <tr>
+              <td class="J-B">julie</td>
+              <td class="J-B">lochness</td>
+              <td class="J-B">pushign daisies</td>
+            </tr>
+            <tr>
+              <td class="J-B">Inner Wave</td>
+              <td class="J-B">1 4 2</td>
+              <td class="J-B">Sun Transmission</td>
+            </tr>
+            <tr>
+              <td class="J-B">Inner Wave</td>
+              <td class="J-B">Eclipse</td>
+              <td class="J-B">Underwater Pipe Dreams</td>
+            </tr>
+            <tr>
+              <td class="J-B">Slow Pulp</td>
+              <td class="J-B">High</td>
+              <td class="J-B">Big Day</td>
+            </tr>
+            <tr>
+              <td class="J-B">Tanuicahn</td>
+              <td class="J-B">Hunned Bandz</td>
+              <td class="J-B">Sundays</td>
+            </tr>
+            <tr>
+              <td class="J-B">Men I Trust</td>
+              <td class="J-B">Say Can You Hear (Album V)</td>
+              <td class="J-B">Oncle Jazz</td>
+            </tr>
+            <tr>
+              <td class="J-B">Tanukichan</td>
+              <td class="J-B">This Time</td>
+              <td class="J-B">Sundays</td>
+            </tr>
+            <tr>
+              <td class="J-B">Sweet Trip</td>
+              <td class="J-B">In Sound, We Found Each Other</td>
+              <td class="J-B">Emotion</td>
+            </tr>
+            <tr>
+              <td class="J-B">Fever the Ghost</td>
+              <td class="J-B">Sun Moth</td>
+              <td class="J-B">Zirconium Meconium</td>
+            </tr>
 
             <!--
     <tr>
@@ -730,7 +869,8 @@
                 const dict = {
                     "M-A": "Exchange 2/4/22",
                     "M-B": "Calibration, 2/16/22",
-                    "J-A": "Music to Send to Megan 2/2/22"
+                    "J-A": "Music to Send to Megan 2/2/22",
+                    "J-B": "More Music to Send to Megan 2/14/22"
                 }
 
                 // string that will temporarily save the original text in cell
