--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
               <td class="M-B">Thx</td>
             </tr>
             <tr>
-              <td class="M-B">Lomel</td>
+              <td class="M-B">Lomelda</td>
               <td class="M-B">Far Out</td>
               <td class="M-B">Thx</td>
             </tr>
